--- a/site/index.html
+++ b/site/index.html
@@ -4,5 +4,5 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1></body>
+<h1>Hello Coursera! Its a great code</h1></body>
 </html>
